bk_ida/gccida/c0/noce_emit_move_insn
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_emit_move_insn/src/ifcvt.c:1040:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)outer), 
  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_emit_move_insn/src/ifcvt.c:1040:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)outer), 
                 ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/noce_emit_move_insn/src/obj/ifcvt.o] Error 1
